--- a/index.html
+++ b/index.html
@@ -36,7 +36,6 @@
   .tag{display:inline-flex;align-items:center;gap:8px;background:var(--tag);color:var(--tag-ink);border:1px solid #eadbff;border-radius:999px;padding:6px 12px;font-weight:800;font-size:12px;box-shadow:var(--tag-shadow)}
   h2{margin:8px 0 10px;font-size:18px}
   .row{display:flex;gap:10px;align-items:center}
-
   .input{width:100%;border:1px solid var(--line);border-radius:10px;padding:10px 12px;background:#fbfcff}
   .btn{appearance:none;border:0;border-radius:10px;padding:10px 14px;font-weight:800;cursor:pointer;user-select:none}
   .btn:active{transform:translateY(1px)}
@@ -45,19 +44,21 @@
   .btn-plain{background:#f7f7fb;color:#111;border:1px solid var(--line)}
   .btn-danger{background:var(--danger);color:#fff;box-shadow:0 10px 22px rgba(239,68,68,.24)}
   .btn-reindex{padding:6px 10px;font-size:.78rem;position:relative;top:-3px}
-
   .hint{font-size:12px;color:var(--muted);margin-top:6px}
   .out{white-space:pre-wrap;min-height:90px;border:1px dashed #c9d5ea;border-radius:12px;padding:10px;margin-top:10px;background:#f3f6ff;color:#0f172a;box-shadow:inset 0 1px 0 #ffffffcc}
   .out-alert{min-height:60px;padding:12px;text-align:center}
   #alertMsg{font-size:24px;font-weight:900;color:#991b1b;margin:0 0 6px}
   #alertResp{margin:0}
-
   .list{margin:8px 0 0;padding:0;list-style:none}
   .item{padding:10px 0;border-top:1px solid var(--line)}
   .file-head{display:flex;align-items:center;gap:10px;flex-wrap:wrap}
   .file-actions{display:flex;gap:8px;flex-wrap:wrap;margin-top:6px}
   .btn-sm{padding:6px 10px;font-size:12px}
   .thumb{width:48px;height:48px;object-fit:cover;border-radius:8px;border:1px solid var(--line);box-shadow:0 6px 14px rgba(99,102,241,.16), 0 3px 8px rgba(40,130,187,.10)}
+
+  /* spinner usado nas buscas */
+  .spinner{width:16px;height:16px;border-radius:50%;border:3px solid #d0dbf0;border-top-color:#6ea8fe;animation:spin .9s linear infinite}
+  @keyframes spin{to{transform:rotate(360deg)}}
 
   footer{margin:18px 0 6px;text-align:center}
   .copyright{font-size:12px;font-weight:700;color:#2882bb;padding:10px 12px;border-radius:10px;background:rgba(40,130,187,.06);display:inline-block}
@@ -144,7 +145,7 @@ const GH_OWNER = "HD-TECH-hash";
 const GH_REPO  = "Ricai-crion-operacao";
 const RAW_BASE = `https://raw.githubusercontent.com/${GH_OWNER}/${GH_REPO}/main`;
 
-/* Lista PDFs no repo */
+/* Lista PDFs salvos no repo (prioridade para evitar download) */
 async function listRepoPdfs(){
   const api = `https://api.github.com/repos/${GH_OWNER}/${GH_REPO}/contents/data/affix/raw?ref=main`;
   const r = await fetch(api, {cache:'no-store'});
@@ -155,13 +156,12 @@ async function listRepoPdfs(){
     .map(it => ({
       name: it.name,
       size: it.size||0,
-      // sempre prioriza o PDF do repositório (não força download; abre em nova aba)
-      openUrl: it.download_url,
+      openUrl: it.download_url, // abre em nova aba e também no <embed>
       origin: "repo"
     }));
 }
 
-/* Lê manifest.json gerado pelo fetch (pode conter links diretos externos) */
+/* Lê manifest.json — contém também os links externos que NÃO baixaram */
 async function listManifestPdfs(){
   try{
     const r = await fetch(`${RAW_BASE}/data/affix/manifest.json?ts=${Date.now()}`, {cache:'no-store'});
@@ -172,7 +172,7 @@ async function listManifestPdfs(){
       .map(x => ({
         name: x.name || x.url.split('/').pop(),
         size: x.size || 0,
-        openUrl: x.repo_raw || x.url, // se o script baixou, usa repo_raw; senão usa o link direto
+        openUrl: x.repo_raw || x.url, // se baixou, usa repo_raw; senão tenta abrir o link externo
         origin: x.repo_raw ? "repo" : "external"
       }));
   }catch(_){ return []; }
@@ -192,7 +192,7 @@ document.addEventListener('DOMContentLoaded', () => {
     finally{ show($('#alertBusy'),false); }
   });
 
-  // SITES OFICIAIS
+  // SITES OFICIAIS  (lista PDFs do repo + manifest; filtro por texto)
   $('#btnSites')?.addEventListener('click', doSites);
   $('#qSites')?.addEventListener('keydown', e=>{ if(e.key==='Enter') doSites(); });
 
@@ -203,13 +203,12 @@ document.addEventListener('DOMContentLoaded', () => {
 
     try{
       const [repo, manifest] = await Promise.all([listRepoPdfs(), listManifestPdfs()]);
-      // junta e “de-duplica” por nome (prioriza repo)
+      // de-dup por nome (prioriza repo)
       const map = new Map();
       for (const it of [...manifest, ...repo]){ if(!map.has(it.name)) map.set(it.name, it); }
       let items = [...map.values()];
       if(q) items = items.filter(it => it.name.toLowerCase().includes(q));
 
-      // header
       const frag = document.createDocumentFragment();
       const meta = document.createElement('div');
       meta.className='hint';
@@ -224,21 +223,20 @@ document.addEventListener('DOMContentLoaded', () => {
 
         const actions = document.createElement('div'); actions.className='file-actions';
 
-        // Abrir (sempre nova aba; sem forçar download)
+        // Abrir (SEM download): nova aba
         const btnOpen = document.createElement('button');
         btnOpen.className='btn btn-plain btn-sm'; btnOpen.textContent='Abrir';
         btnOpen.addEventListener('click', ()=> window.open(it.openUrl, '_blank', 'noopener'));
         actions.appendChild(btnOpen);
 
-        // Prévia inline (usa <embed> com o PDF)
+        // Prévia inline (navegador renderiza o PDF nativo)
         const btnPrev = document.createElement('button');
-        btnPrev.className='btn btn-plain btn-sm'; btnPrev.textContent='Prévia';
+        btnPrev.className='btn btn-plain btn-sm'; btnPrev.textContent='Prévía'.replace('í','í'); // só pra manter acento ok
         btnPrev.addEventListener('click', ()=>{
           const id = 'prev_'+btoa(it.openUrl).replace(/=+/g,'');
           let prev = document.getElementById(id);
           if(prev){ prev.remove(); return; }
           prev = document.createElement('div'); prev.id = id; prev.style.marginTop='8px';
-          // OBS: se a URL estiver 404 ou não for PDF, aparecerá a página de erro do host.
           prev.innerHTML = `<embed src="${it.openUrl}#toolbar=1" type="application/pdf" style="width:100%;height:480px;border:1px solid var(--line);border-radius:10px">`;
           wrap.appendChild(prev);
         });
@@ -246,8 +244,9 @@ document.addEventListener('DOMContentLoaded', () => {
 
         const meta2 = document.createElement('div'); meta2.className='hint';
         meta2.textContent = `Tamanho: ${humanSize(it.size||0)}`;
-        wrap.appendChild(actions); wrap.appendChild(meta2);
 
+        wrap.appendChild(actions);
+        wrap.appendChild(meta2);
         frag.appendChild(wrap);
       }
 
@@ -259,7 +258,7 @@ document.addEventListener('DOMContentLoaded', () => {
     }
   }
 
-  // CRION (mantido)
+  // CRION (GAS)
   $('#btnCRION')?.addEventListener('click', async ()=>{
     const q=(($('#qCRION').value)||'').trim(); if(!q){ $('#crionStatus').textContent='Digite um termo.'; return; }
     show($('#crionBusy'),true); $('#crionStatus').textContent='Listando arquivos…'; $('#crionList').innerHTML="";
@@ -275,12 +274,12 @@ document.addEventListener('DOMContentLoaded', () => {
         frag.appendChild(li);
       });
       $('#crionList').appendChild(frag);
-      // prévias (lotes)
       if(items.length){
-        let from=0; while(from<items.length){
+        let from=0; 
+        while(from<items.length){
           const x = await fetch(APP_URL+"?fn=fetchcrionsnippets", {method:"POST",headers:{"Content-Type":"text/plain"},body:JSON.stringify({sessionId:r.sessionId,from,limit:6})}).then(r=>r.json());
           (x.items||[]).forEach(row=>{
-            const el=$('#snip_crion_'+row.index);
+            const el=document.querySelector('#snip_crion_'+row.index);
             el.innerHTML=(row.snippets && row.snippets.length)
               ? row.snippets.map(s=>`<div style="color:#374151;font-size:13px;margin:6px 0">${esc(s)}</div>`).join("")
               : '<span class="hint">—</span>';
